--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,11 +18,61 @@
     <script th:src="@{/js/scripts.js}" defer></script>
 </head>
 <body>
+
+<div class="modalContainer" id="signInModal">
+    <div class="modalContent">
+        <button class="closeModal" onclick="closeSignInModal()">&times;</button>
+        <div class="left-side"></div>
+        <div class="right-side">
+            <h1>Hi There!<br> Welcome to betGPT</h1>
+            <button class="google-signin button btn-100"><span> <img src="/img/icons/google.png"/></span>Sign in with Google</button>
+            <div class="separator"> or </div>
+            <form>
+                <input type="email" placeholder="Your Email" required>
+                <input type="password" placeholder="Your Password" required>
+                <div class="forgot-password">Forgot password?</div>
+                <button type="submit" class="button btn-100 login-btn">Login</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modalContainer" id="paymentModal">
+    <div class="modalContent">
+        <button class="closeModal" onclick="closePaymentModal()">&times;</button>
+        <div class="left-side">
+            <div class="top">
+                <h1>Upgrade<br>Your Account</h1>
+                <p>Unlimited Predictions. Ask anything, <br> and Tom will always answer</p>
+            </div>
+            <div class="bottom">
+            </div>
+        </div>
+        <div class="right-side">
+            <h1>Payment Details</h1>
+            <button class="google-signin button btn-100"><span> <img src="/img/icons/google.png"/></span>Sign in with Google</button>
+            <div class="separator"> or </div>
+            <form>
+                <input type="email" placeholder="Your Email" required>
+                <input type="password" placeholder="Your Password" required>
+                <div class="forgot-password">Forgot password?</div>
+                <button type="submit" class="button btn-100 login-btn">Login</button>
+            </form>
+        </div>
+    </div>
+</div>
+
 <nav>
     <div class="nav-container">
         <div class="nav-content">
             <div class="nav-title">
                 <h1>betGpt</h1>
+            </div>
+            <div class="nav-buttons">
+                <ul>
+                    <li><a href="#" onclick="openSignInModal()" class="button button-secondary">Sign in</a></li>
+                    <li><a href="#" onclick="openPaymentModal()" class="button button-primary">Upgrade</a></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -34,7 +84,7 @@
         <div class="typing-textarea">
           <textarea
                   id="chat-input"
-                  placeholder="Enter a prompt here"
+                  placeholder="Golden State Warrior vs Oklahoma City Thunder, NBA, who would win?"
                   required
           ></textarea>
             <span id="send-btn" class="material-symbols-outlined">send</span>
