--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -41,14 +41,16 @@
 body {
     background-color: var(--outgoing-chat-bg);
 }
-.nav-container .nav-content{
+
+.nav-container .nav-content {
     background: var(--nav-bg);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-.nav-container .nav-content .nav-title{
+
+.nav-container .nav-content .nav-title {
     font-size: 1.2rem;
     font-weight: 600;
     color: var(--text-color);
@@ -56,23 +58,28 @@ body {
     padding: 1rem 0;
     margin-left: 1rem;
 }
-.nav-container .nav-content .nav-buttons{
+
+.nav-container .nav-content .nav-buttons {
     margin-right: 1rem;
 }
-.nav-container .nav-content .nav-buttons ul{
+
+.nav-container .nav-content .nav-buttons ul {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     list-style: none;
 }
-.nav-container .nav-content .nav-buttons ul li{
+
+.nav-container .nav-content .nav-buttons ul li {
     margin: 0 0.5rem;
 }
-.nav-container .nav-content .nav-buttons ul li a{
+
+.nav-container .nav-content .nav-buttons ul li a {
     text-decoration: none;
 }
-.nav-container .nav-content .nav-title h1{
+
+.nav-container .nav-content .nav-title h1 {
     color: var(--nav-text-color);
 }
 
@@ -289,6 +296,7 @@ span.material-symbols-outlined {
     background: var(--incoming-chat-bg);
     border: 1px solid var(--incoming-chat-border);
 }
+
 /*UTILs*/
 .button {
     display: inline-block;
@@ -299,14 +307,17 @@ span.material-symbols-outlined {
     transition: all 0.3s ease-in-out;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
+
 .button:hover {
     transform: translateY(-4px);
 }
+
 .button.button-secondary {
     background-color: var(--icon-color);
     color: #fff;
     border: 1px solid var(--icon-hover-bg);
 }
+
 .button.button-primary {
     border: none;
     background-color: var(--btn-color-success);
@@ -322,6 +333,7 @@ span.material-symbols-outlined {
     background-color: var(--btn-color-success-hover);
     color: var(--icon-color);
 }
+
 /*Sign in Modal*/
 /* Modal Styles */
 .modalContainer {
@@ -337,9 +349,8 @@ span.material-symbols-outlined {
 
 .modalContent {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     max-width: 720px;
     height: 600px;
     background-color: #FFFFFF;
@@ -349,6 +360,11 @@ span.material-symbols-outlined {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+#paymentModal .modalContent {
+    max-width: 1046px;
+    height: 656px;
 }
 
 
@@ -361,11 +377,13 @@ span.material-symbols-outlined {
     background-position: center;
     z-index: 1;
 }
+
 .left-side,
-.left-side::before{
+.left-side::before {
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
 }
+
 .left-side::before {
     z-index: -1;
     content: "";
@@ -377,20 +395,83 @@ span.material-symbols-outlined {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+#paymentModal .modalContent .left-side::before {
+    display: none;
+}
+
 .left-side img {
     width: 100%;
     height: 100%;
+}
+
+#paymentModal .modalContent .left-side {
+    background: none;
+    display: flex;
+    flex-direction: column;
+    padding: .5rem 0 .5rem .5rem;
+}
+#paymentModal .modalContent .left-side .bottom{
+    display: flex;
+    flex-direction: column;
+}
+
+#paymentModal .modalContent .left-side .top {
+    background: #000000;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+#paymentModal .modalContent .left-side .top h1{
+    color: #F1E15F;
+}
+#paymentModal .modalContent .left-side .top p{
+    color: #C3C3C3;
+    margin-top: 1rem;
+}
+
+#paymentModal .modalContent .left-side .bottom {
+    background: #F1F2F0;
+    height: 50%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+#paymentModal .modalContent .left-side {
+    width: 40%;
+}
+
+#paymentModal .modalContent .right-side {
+    width: 60%;
+}
+#paymentModal .modalContent .right-side h1{
+    font-size: 1rem;
+    text-align: left;
+    margin-bottom: 0.3rem;
+}
+.card-icons{
+    display: flex;
+    justify-content: space-evenly;
+}
+.card-icons img{
+    width: 12rem;
 }
 
 .right-side {
     width: 70%;
     padding: 0 3rem;
 }
-.right-side h1{
+
+.right-side h1 {
     text-align: center;
     font-weight: bold;
     margin-bottom: 2rem;
 }
+
 .google-signin {
     background-color: #ffffff;
     font-weight: 600;
@@ -403,18 +484,30 @@ span.material-symbols-outlined {
     align-items: center;
     justify-content: center;
 }
-.google-signin span{
+
+.google-signin span {
     display: inline-flex;
     align-items: center;
     justify-content: center;
 }
-.google-signin span img{
+
+.google-signin span img {
     width: 2rem;
-    height:2rem;
+    height: 2rem;
     margin-right: 10px;
 }
+
 .login-btn {
     background-color: rgb(0, 0, 0);
+    color: #FFFFFF;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    padding: 1rem 0;
+}
+
+.pay-btn {
+    background-color: #1C2F12;
     color: #FFFFFF;
     border: none;
     border-radius: 4px;
@@ -444,13 +537,21 @@ span.material-symbols-outlined {
 
 /* Show/hide modal animation */
 @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeOut {
-    from { opacity: 1; }
-    to { opacity: 0; }
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 .closeModal {
@@ -473,6 +574,9 @@ span.material-symbols-outlined {
     margin: 2rem 0;
     color: #999999;
 }
+#paymentModal .modalContent .right-side .separator{
+    margin: 0 ;
+}
 
 .separator::before,
 .separator::after {
@@ -492,7 +596,74 @@ span.material-symbols-outlined {
     margin-left: 10px;
 }
 
-.chat-response-div p:first-child{
+.chat-response-div p:first-child {
     margin-bottom: 1rem;
+}
+
+.plans {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    transform: translateY(-3.5rem);
+    z-index: 1;
+}
+
+.plans .plan input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+}
+
+.plans .plan {
+    cursor: pointer;
+    width: 90%;
+    margin: 0 1rem;
+    text-align: center;
+}
+
+.plans .plan:first-child{
+    margin-bottom: .5rem;
+}
+
+.plans .plan .plan-details span {
+    font-size: 1.5rem;
+    line-height: 18px;
+}
+
+.plans .plan .plan-content:hover {
+    -webkit-box-shadow: 0px 3px 5px 0px #e8e8e8;
+    box-shadow: 0px 3px 5px 0px #e8e8e8;
+}
+.plans .plan .plan-content{
+    padding: 1.5rem 0;
+    box-shadow: 0px 3px 5px 0px #e8e8e8;
+    border: 1px solid var(--icon-color);
+    border-radius: 1.6rem;
+    background: #FFFFFF;
+}
+
+.plans .plan input[type="radio"]:checked + .plan-content {
+    background: #15300D;
+    border-color: #15300D;
+    color: #F1E15F;
+    -webkit-transition: ease-in 0.1s;
+    -o-transition: ease-in 0.1s;
+    transition: ease-in 0.1s;
+}
+.feature-list ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.feature-list ul li{
+    margin-bottom: .3rem;
+    display: flex;
+    align-items: center;
+}
+.feature-list ul li span{
+    display: inline-block;
+    margin-right: .2rem;
+    color: green;
 }
 
