--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" th:href="@{/css/highlight.css}">
 
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+
     <!-- Loogle Fonts Link For Icons -->
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <script th:src="@{/js/highlight.js}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script>hljs.highlightAll();</script>
     <script th:src="@{/js/marked.min.js}"></script>
+    <script th:src="@{/js/jquery.min.js}"></script>
     <script th:src="@{/js/scripts.js}" defer></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script th:src="@{/js/payment-handler.js}" defer></script>
 </head>
 <body>
+
+<!--<div class="alert alert-info" th:if="message!=null" th:text="${message}"></div>-->
 
 <div class="modalContainer" id="signInModal">
     <div class="modalContent">
@@ -80,29 +87,18 @@
         <div class="right-side">
             <h1>Payment Details</h1>
             <div class="card-icons">
-                <img src="/img/debit-card.png"/>
-                <img src="/img/debit-card.png"/>
+                <img id="card-payment" class="active" src="/img/debit-card.png" alt="stripe"/>
+                <img id="paypal-payment" src="/img/debit-card.png" alt="paypal"/>
             </div>
             <div class="separator"> Card Information </div>
-            <form>
+            <form id="card-payment-form">
+                <input id="api-key" type="hidden" th:value="${stripePublicKey}">
                 <label>Card Holder Name</label>
-                <input type="text" placeholder="Name on Credit/debit card" required>
-                <label>Card Card Number</label>
-                <input type="number" placeholder="xxxx xxxx xxxx xxxx" required>
-                <div style="display:flex;">
-                    <div style="margin-right: 1rem">
-                        <label>Expiry Date</label>
-                        <div style="display: flex">
-                            <input type="number" placeholder="MM" required style="margin-right: .5rem">
-                            <input type="number" placeholder="YY" required>
-                        </div>
-                    </div>
-                    <div>
-                        <label>CVV</label>
-                        <input type="password" placeholder="123" required>
-                    </div>
+                <input type="text" id="card-holder-name" placeholder="Name on Credit/debit card" required>
+                <div class="w-100" id="card-element">
+                    <!-- A Stripe Element will be inserted here. -->
                 </div>
-                <button type="submit" class="button btn-100 pay-btn">Pay Now</button>
+                <button type="submit" id="btn-card-pay" class="button btn-100 pay-btn">Pay Now</button>
             </form>
         </div>
     </div>
