--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -39,7 +39,7 @@
 }
 
 body {
-    background-color: var(--outgoing-chat-bg);
+    background-color: var(--outgoing-chat-bg)!important;
 }
 
 .nav-container .nav-content {
@@ -135,7 +135,6 @@ body {
     flex-direction: column;
     height: 70vh;
     padding: 0 10px;
-    color: var(--text-color);
 }
 
 .default-text img {
@@ -145,11 +144,13 @@ body {
 
 .default-text h1 {
     font-size: 3.3rem;
+    color: var(--text-color);
 }
 
 .default-text p {
     font-size: 1.1rem;
     margin-top: 10px;
+    color: var(--text-color);
 }
 
 .chat .chat-content span.copy-btn {
