--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -131,7 +131,7 @@
                                class="button button-secondary">Sign in</a></li>
                     </th:block>
                     <th:block sec:authorize="isFullyAuthenticated()">
-                        <li><a href="#" onclick="openSignInModal()" class="button button-secondary"><p
+                        <li><a href="#" class="button button-secondary"><p
                                 th:text="${userDetails}"></p></a></li>
                         <li><a href="/logout" sec:authorize="isFullyAuthenticated()" class="button button-secondary">Logout</a>
                         </li>
