--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,10 +18,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script>hljs.highlightAll();</script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script th:src="@{/js/marked.min.js}"></script>
     <script th:src="@{/js/jquery.min.js}"></script>
     <script th:src="@{/js/scripts.js}" defer></script>
-    <script src="https://js.stripe.com/v3/"></script>
     <script th:src="@{/js/payment-handler.js}" defer></script>
 </head>
 <body>
@@ -78,8 +78,7 @@
                 </div>
                 <div class="feature-list">
                     <ul>
-                        <li><span class="material-symbols-outlined">offline_pin</span>Ask sports game prediction
-                        </li>
+                        <li><span class="material-symbols-outlined">offline_pin</span>Ask sports game prediction</li>
                         <li><span class="material-symbols-outlined">offline_pin</span> Ask sports game prediction</li>
                         <li><span class="material-symbols-outlined">offline_pin</span> Ask sports game prediction</li>
                     </ul>
@@ -108,6 +107,7 @@
                     <input id="api-key" type="hidden" th:value="${stripePublicKey}">
                     <label>Card Holder Name</label>
                     <input type="text" id="card-holder-name" placeholder="Name on Credit/debit card" required>
+                    <div class="text-danger w-100" id="card-errors" role="alert"></div>
                     <div class="w-100" id="card-element">
                         <!-- A Stripe Element will be inserted here. -->
                     </div>
@@ -135,8 +135,8 @@
                                 th:text="${userDetails}"></p></a></li>
                         <li><a href="/logout" sec:authorize="isFullyAuthenticated()" class="button button-secondary">Logout</a>
                         </li>
-                        <li><a href="#" onclick="openPaymentModal()" class="button button-primary">Upgrade</a></li>
                     </th:block>
+                        <li><a href="#" onclick="openPaymentModal()" class="button button-primary">Upgrade</a></li>
                 </ul>
             </div>
         </div>
