--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,8 +105,8 @@
                 <div class="separator"> Card Information</div>
                 <form id="card-payment-form">
                     <input id="api-key" type="hidden" th:value="${stripePublicKey}">
-                    <label>Card Holder Name</label>
-                    <input type="text" id="card-holder-name" placeholder="Name on Credit/debit card" required>
+                    <label>Card Holder Email</label>
+                    <input type="email" id="card-holder-name" placeholder="Name on Credit/debit card" required>
                     <div class="text-danger w-100" id="card-errors" role="alert"></div>
                     <div class="w-100" id="card-element">
                         <!-- A Stripe Element will be inserted here. -->
